--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
+	"printWidth": 120,
 	"useTabs": true,
+	"arrowParens": "avoid",
+	"semi": false,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"tabWidth": 4,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
