--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		]
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.539.0"
+		"@lucide/svelte": "^0.539.0",
+		"@sveltejs/adapter-static": "^3.0.9"
 	}
 }
